add canvas tag for aframe

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </a-marker>
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
-        <a-entity camera></a-entity>
+        <a-entity camera=""></a-entity>
+        <canvas class="a-canvas" data-aframe-canvas="true" width="1316" height="987"></canvas>
+        <div class="a-loader-title" style="display: none;"></div>
+        <a-entity light="" data-aframe-default-light="" aframe-injected=""></a-entity>
+        <a-entity light="" position="" data-aframe-default-light="" aframe-injected=""></a-entity>
         </a-scene>
     </body>
 </html>
