--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
-        <meta aframe-injected="" name="theme-color" content="black">
     </head>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
@@ -11,7 +9,7 @@
     
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded="" vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;" inspector="" keyboard-shortcuts="" screenshot="">
+        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
@@ -30,10 +28,6 @@
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
         <a-entity camera=""></a-entity>
-        <canvas class="a-canvas" data-aframe-canvas="true" width="1316" height="987"></canvas>
-        <div class="a-loader-title" style="display: none;"></div>
-        <a-entity light="" data-aframe-default-light="" aframe-injected=""></a-entity>
-        <a-entity light="" position="" data-aframe-default-light="" aframe-injected=""></a-entity>
         </a-scene>
     </body>
 </html>
